--- a/css/styles.css
+++ b/css/styles.css
@@ -16,5 +16,10 @@
 }
 .border {
 border-width:50px;
-border-color: blue;
+border-color: black;
+background-color:#3271a8;
+}
+.intro, h3 {
+  text-align:center;
+  color: black; font-family: 'Trocchi', serif;
 }
