--- a/css/styles.css
+++ b/css/styles.css
@@ -19,7 +19,19 @@ border-width:50px;
 border-color: black;
 background-color:#3271a8;
 }
-.intro, h3 {
+.intro {
   text-align:center;
   color: black; font-family: 'Trocchi', serif;
+  /*got font style from https://wdexplorer.com/20-examples-beautiful-css-typography-design*/
+}
+h1, h2, h3 {
+  color: black; font-family: 'Trocchi', serif;
+  font-weight: bolder;
+  /*got font style from https://wdexplorer.com/20-examples-beautiful-css-typography-design*/
+}
+ 
+.jumbotron {
+  text-align: center;
+}
+li { text-decoration: underline;
 }
